# lan-cross-sync

./: README.md  package.json  pnpm-lock.yaml
docs/: BUILD_AND_TEST.md  DEVELOPMENT_ROADMAP.md  PROJECT_GUIDE.md
docs/superpowers/plans/: 2026-07-23-connection-foundation.md  2026-07-23-discovery-receive-loop.md  2026-07-23-mvp-sync-localization.md  2026-07-23-network-port-discovery-hardening.md  2026-07-24-drop-overlay.md
docs/superpowers/specs/: 2026-07-23-lan-cross-device-sync-design.md  2026-07-23-network-port-discovery-hardening-design.md  2026-07-24-drop-overlay-design.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  discovery.rs  domain.rs  error.rs  file_transfer.rs  lib.rs  main.rs  pairing.rs  protocol.rs  registry.rs  settings.rs  transport.rs
src/lib/: api.ts  i18n.ts  overlay.ts  types.ts
