[package]
name = "lan-cross-sync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lan_cross_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.53.1", features = ["full"] }
uuid = { version = "1.24.0", features = ["v4", "serde"] }
thiserror = "2.0.19"
anyhow = "1.0.104"
arboard = "3.6.1"
base64 = "0.22.1"
directories = "6.0.0"
time = { version = "0.3.54", features = ["serde", "formatting"] }
tracing = "0.1.44"
rand = "0.10.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = { version = "5.4.1", features = ["monitor"] }

[dev-dependencies]
tempfile = "3.27.0"
